force-app/main/default/objects/VSAImmobilie__c/VSAImmobilie__c.object-meta.xml
<CustomObject>
    <label>VSA Immobilie</label>
    <nameField>
        <label>Bezeichnung</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VSA Immobilien</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>