force-app/main/default/objects/VSAImmobilie__c/fields/Art__c.field-meta.xml
<CustomField>
    <fullName>Art__c</fullName>
    <label>Art</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eigenheim</fullName>
            </value>
            <value>
                <fullName>Anlageimmobilie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>