force-app/main/default/objects/VSAImmobilie__c/fields/MonatlicheNettokaltmiete__c.field-meta.xml
<CustomField>
    <fullName>MonatlicheNettokaltmiete__c</fullName>
    <label>Monatliche Nettokaltmiete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>