force-app/main/default/objects/VSAImmobilie__c/fields/PostleitzahlOrtDerImmobilie__c.field-meta.xml
<CustomField>
    <fullName>PostleitzahlOrtDerImmobilie__c</fullName>
    <label>Postleitzahl / Ort der Immobilie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>