force-app/main/default/objects/VSAImmobilie__c/fields/Restschuld__c.field-meta.xml
<CustomField>
    <fullName>Restschuld__c</fullName>
    <label>Restschuld</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>