force-app/main/default/objects/VSAImmobilie__c/fields/Verkehrswert__c.field-meta.xml
<CustomField>
    <fullName>Verkehrswert__c</fullName>
    <label>Verkehrswert</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>